# ann

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.dxy  LICENSE  README.md  create.bat  history.md
lib/: CMakeLists.txt  net.cpp  net.h  neuron.cpp  neuron.h  test_lib.cpp  test_lib.h
src/: CMakeLists.txt  ann.cpp  ann.md  requirements.md
test/: CMakeLists.txt  ExampleTest.cpp  Test1.cpp  net_test.h
